[package]
name = "online-judge-utils"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
heap-array = []

[dependencies]
heap-array = "0.1.7"
once_cell = "1.18.0"

[build-dependencies]
proc-macro2 = "1.0.78"