[package]
name = "online-judge-utils"
version = "0.1.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
heap-array = ["dep:heap-array"]

[dependencies]
heap-array = { version = "0.1.9", optional = true }

[build-dependencies]
proc-macro2 = "1.0.88"